--- a/src/app/pages/all-city/all-city.component.scss
+++ b/src/app/pages/all-city/all-city.component.scss
@@ -10,3 +10,13 @@ main.grid {
   justify-content: flex-start;
   gap: 20px;
 }
+
+@media screen and (max-width: 768px) {
+  main {
+    padding: 20px;
+  }
+
+  main.grid {
+    justify-content: center;
+  }
+}
