--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,14 @@ nav {
   border-radius: 4px;
   padding: 10px 20px;
 }
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 70px;
+    padding: 20px;
+  }
+
+  nav {
+    padding: 20px;
+  }
+}
